--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-keras_tuner==1.4.7
-numpy==2.1.3
-pandas==2.2.3
-scikit_learn==1.3.2
-tensorflow==2.16.0rc0
-tensorflow_intel==2.16.0rc0
+keras_tuner
+numpy
+pandas
+scikit_learn
+tensorflow
+tensorflow_intel
